# method-of-secant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  database.py  demonstration.md  main.py  requirements.txt  servers.py  test_singleton.py
src/: main.cpp
src/algorithms/graph_cycle/: graph_cycle.cpp  graph_cycle.h
src/algorithms/md5/: md5.cpp  md5.h
src/algorithms/secant/: secant.cpp  secant.h
src/algorithms/vigenere/: vigenere.cpp  vigenere.h
src/auth/: auth.cpp  auth.h
src/database/: database.cpp  database.h
src/handlers/: handlers.cpp  handlers.h
src/server/: server.cpp  server.h
src/utils/: json.cpp  json.h
